# convobrief

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DASHBOARD.md  Dockerfile  ENDPOINT_COMPARISON.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  QUICKSTART_DASHBOARD.md  README.md  SIMPLE_ANALYSIS.md  TESTING.md  dashboard.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/insightsvc/: __init__.py  config.py  logging.py  metrics.py  schemas.py
src/insightsvc/api/: app.py  routes.py
src/insightsvc/models/: base.py  hf_asr.py
src/insightsvc/pipelines/: analyze_meeting.py
src/insightsvc/services/: align.py  audio_io.py  summarize.py
src/insightsvc/utils/: timecode.py
tests/: conftest.py  test_with_samples.py
tests/data/: README.md  generate_samples.py  manifest.json  sample_2speakers_clean.json  sample_2speakers_noisy.json  sample_2speakers_sarcasm.json  sample_3speakers_overlap.json
tests/integration/: test_pipeline.py
tests/unit/: test_align.py
